// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowBack 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#a)"
  >
    <path
      d="M17.51 3.87 15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="a"
    >
      <path
        d="M0 0h24v24H0z"
        fill="#fff"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowDown 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17.835 9.165a.563.563 0 0 0-.732-.055l-.063.055-4.852 4.852-4.853-4.852a.563.563 0 0 0-.732-.055l-.063.055c-.2.2-.218.512-.055.732l.055.063 5.25 5.25c.2.2.512.218.732.055l.063-.055 5.25-5.25a.562.562 0 0 0 0-.795Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowLeft 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  transform="scale(-1 1)"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#a)"
  >
    <path
      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="a"
    >
      <path
        d="M0 0h24v24H0z"
        fill="#fff"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > ArrowRight 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#a)"
  >
    <path
      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="a"
    >
      <path
        d="M0 0h24v24H0z"
        fill="#fff"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Cancel 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > CarbonSearch 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="m21.75 20.69-5.664-5.665a8.264 8.264 0 1 0-1.06 1.061l5.663 5.664 1.061-1.06ZM3 9.75a6.75 6.75 0 1 1 6.75 6.75A6.757 6.757 0 0 1 3 9.75Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Check 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="m9.7 18.025-5.7-5.7L5.425 10.9 9.7 15.175 18.875 6 20.3 7.425l-10.6 10.6Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > InfoOutline 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M11 17h2v-6h-2v6Zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8ZM11 9h2V7h-2v2Z"
    fill="inherit"
  />
  <path
    d="M11 7h2v2h-2V7Zm0 4h2v6h-2v-6Z"
    fill="inherit"
  />
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Z"
    fill="inherit"
  />
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Link 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    clip-path="url(#a)"
  >
    <path
      d="M17 7h-4v2h4c1.65 0 3 1.35 3 3s-1.35 3-3 3h-4v2h4c2.76 0 5-2.24 5-5s-2.24-5-5-5Zm-6 8H7c-1.65 0-3-1.35-3-3s1.35-3 3-3h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-2Zm-3-4h8v2H8v-2Zm9-4h-4v2h4c1.65 0 3 1.35 3 3s-1.35 3-3 3h-4v2h4c2.76 0 5-2.24 5-5s-2.24-5-5-5Zm-6 8H7c-1.65 0-3-1.35-3-3s1.35-3 3-3h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-2Zm-3-4h8v2H8v-2Z"
      fill="inherit"
    />
  </g>
  <defs>
    <clippath
      id="a"
    >
      <path
        d="M0 0h24v24H0z"
        fill="#fff"
      />
    </clippath>
  </defs>
</svg>
`;

exports[`Icon 컴포넌트 테스트 > Icon 컴포넌트 스냅샷 테스트 > Plus 아이콘 1`] = `
<svg
  data-testid="icon"
  fill="#414344"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2Z"
    fill="inherit"
  />
</svg>
`;
